--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "route-optimization-system",
+  "name": "routemind",
   "private": true,
   "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -19,7 +18,8 @@
     "react-hook-form": "^7.49.3",
     "recharts": "^2.12.0",
     "zustand": "^4.4.7",
-    "leaflet-routing-machine": "^3.2.12"
+    "leaflet-routing-machine": "^3.2.12",
+    "@vitejs/plugin-react": "^4.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -27,7 +27,6 @@
     "@types/leaflet-routing-machine": "^3.2.8",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
